fixed alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -163,12 +163,14 @@ a.read-more {
 .teacher-info .rating {
   font-size: 12px;
   margin: auto 0;
+  display: inline-flex;
+  align-items: center;
 }
 
 .teacher-info .rating > svg {
   width: 12px;
   height: 12px;
-  margin: auto 0 -1px 3px;
+  margin-left: 3px;
 }
 
 .tag {
